[tool.poetry]
name = "githubtrackerapi"
version = "0.1.0"
description = ""
authors = ["bresha <hrvoje.bresic@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.104.1"


[tool.poetry.group.dev.dependencies]
uvicorn = {extras = ["standard"], version = "^0.24.0.post1"}
black = "^23.11.0"


[tool.poetry.group.test.dependencies]
pytest = "^7.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
